// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: loaded 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    title="marketplace.page"
  />
  <Header />
  <EditionBoxes />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.plugins
    </h1>
    <div
      className="page-description"
    >
      marketplace.page.plugins.description
    </div>
  </header>
  <Search
    query={
      Object {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <DeferredSpinner
    loading={false}
  >
    <PluginsList
      pending={
        Object {
          "installing": Array [],
          "removing": Array [],
          "updating": Array [],
        }
      }
      plugins={
        Array [
          Object {
            "key": "sonar-foo",
            "name": "Sonar Foo",
          },
        ]
      }
      readOnly={true}
      refreshPending={[MockFunction]}
    />
    <Footer
      total={1}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="marketplace"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    title="marketplace.page"
  />
  <Header />
  <EditionBoxes />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      marketplace.page.plugins
    </h1>
    <div
      className="page-description"
    >
      marketplace.page.plugins.description
    </div>
  </header>
  <Search
    query={
      Object {
        "filter": "all",
        "search": "",
      }
    }
    updateCenterActive={false}
    updateQuery={[Function]}
  />
  <DeferredSpinner
    loading={true}
  >
    marketplace.plugin_list.no_plugins.all
  </DeferredSpinner>
</div>
`;
